log
Thu 09 May 2024 04:26:59 AM UTC: 
 tests:  1|8
total_score: 0/70
86273dc
Thu 09 May 2024 04:30:03 AM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
7144170
Thu 09 May 2024 04:44:33 AM UTC: 
 treemap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  4|7
total_score: 5/70
5f90242
Thu 09 May 2024 04:47:33 AM UTC: 
 treemap.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
83a3342
Thu 09 May 2024 04:56:46 AM UTC: 
 treemap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:14: error: unused variable ‘padre’ [-Werror=unused-variable]
   53 |   TreeNode * padre = NULL;
      |              ^~~~~
cc1: all warnings being treated as errors
Compilation failed
e05e0d6
Thu 09 May 2024 04:57:13 AM UTC: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:53:14: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   53 |   TreeNode * parent = NULL;
      |              ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc2e6c6
